# mcp-weather

./: .gitignore  Dockerfile  Makefile  README.md  agents.md  pyproject.toml
.beads/: weather_state.json
.github/: renovate.json
.github/workflows/: build-docker-image.yml  flake8.yml  renovate.yml  test.yml
.ralph/: github-72.md
src/: main.py  weather_README.md  weather_api.py  weather_state.py
src/weather/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/weather/api/: __init__.py  weather_forecast_apis_api.py
src/weather/docs/: CurrentWeather.md  DailyResponse.md  HourlyResponse.md  V1ForecastGet200Response.md  V1ForecastGet400Response.md  WeatherForecastAPIsApi.md
src/weather/models/: __init__.py  current_weather.py  daily_response.py  hourly_response.py  v1_forecast_get200_response.py  v1_forecast_get400_response.py
src/weather/test/: test_current_weather.py  test_daily_response.py  test_hourly_response.py  test_v1_forecast_get200_response.py  test_v1_forecast_get400_response.py  test_weather_forecast_apis_api.py
tests/: test_example.py  test_main.py  test_weather_api.py  test_weather_state.py
